<resources>
    <string name="app_name">Stay Fit</string>
    <string name="workout">Workout</string>
    <string name="meal">Meal</string>
    <string name="exercises">Exercises</string>
    <string name="nutrition">Nutrition</string>
    <string name="log">Log</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="professional">Professional</string>
    <string name="weightloss">Weight Loss</string>
    <string name="build_muscle">Build Muscle</string>
    <string name="get_lean">Get Lean</string>
    <string name="empty_workout">No Workout Log Found</string>
    <string name="empty_meal">No Meal Log Found</string>
    <string name="fitness_dialog_title">What is your fitness level?</string>
    <string name="fitness_dialog_message">Discover your fitness level by taking our quiz!</string>
    <string name="dialog_yes_button">Find Out</string>
    <string name="dialog_no_button">Cancel</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_meal">Add Meal</string>
    <string name="ex1">Exercise 1</string>
    <string name="ex1_dis">Barbell Bench Press</string>
    <string name="ex2">Exercise 2</string>
    <string name="ex2_dis">Barbell Back Squat</string>
    <string name="ex3">Exercise 3</string>
    <string name="ex3_dis">Pull-Ups</string>
    <string name="ex4">Exercise 4</string>
    <string name="ex4_dis">Lying Dumbbell Hamstring Curls</string>
    <string name="ex5">Exercise 5</string>
    <string name="ex5_dis">Standing Overhead Press</string>
    <string name="ex6">Exercise 6</string>
    <string name="ex6_dis">Face Pulls</string>
    <string name="ex7">Exercise 7</string>
    <string name="ex7_dis">Drag Curls</string>
    <string name="ex_note">Repeat this exercise routine for 3 days/week for 6 weeks</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="day1">Day 1</string>
    <string name="Chest_and_Biceps">Chest and Biceps</string>
    <string name="day2">Day 2</string>
    <string name="leg_and_shoulder">Leg and Shoulder</string>
    <string name="day3">Day 3</string>
    <string name="day_off">Off Day</string>
    <string name="day4">Day 4</string>
    <string name="Back_and_Triceps">Back and Triceps</string>
    <string name="day5">Day 5</string>
    <string name="day5_dis">Cardio 30 minutes + 200 Sit-ups</string>
    <string name="day6">Day 6</string>
    <string name="day7">Day 7</string>
    <string name="in_note">Repeat this exercise routine for 12 weeks</string>
    <string name="Chest_Core">Chest+Core</string>
    <string name="leg">Leg</string>
    <string name="Back">Back</string>
    <string name="Shoulder_Core">Shoulder + Core</string>
    <string name="Biceps_and_Triceps">Biceps and Triceps</string>
    <string name="pf_note">Repeat this weekly workout routine for 16 weeks.</string>
    <string name="in_ex1_dis">Barbell Bench Press</string>
    <string name="in_ex2_dis">Dumbbell Fly</string>
    <string name="in_ex3_dis">Cable Fly</string>
    <string name="in_ex4_dis">Barbell Curl</string>
    <string name="in_ex5_dis">Dumbbell Concentration Curl</string>
    <string name="in_ex6_dis">Cable Hammer Curl</string>
    <string name="in_ex1_dis_day2">"Barbell Squat "</string>
    <string name="in_ex2_dis_day2">Deadlift</string>
    <string name="in_ex3_dis_day2">Lunges</string>
    <string name="in_ex4_dis_day2">Calf Raise</string>
    <string name="in_ex5_dis_day2">Dumbbell Shoulder Press</string>
    <string name="in_ex6_dis_day2">Dumbbell Lateral Raise</string>
    <string name="in_ex7_dis_day2">Cable Reverse Fly</string>
    <string name="in_ex1_dis_day4">Pull Up</string>
    <string name="in_ex2_dis_day4">Barbell Row superset with Cable Reverse Row</string>
    <string name="in_ex3_dis_day4">Cable Row superset with Dumbbell Single Arm Row</string>
    <string name="in_ex4_dis_day4">Cable Pullover</string>
    <string name="in_ex5_dis_day4">Cable Pushdown</string>
    <string name="in_ex6_dis_day4">Single Arm Kickback</string>
    <string name="in_ex7_dis_day4">Narrow Grip Bench Press</string>
    <string name="ex8">Exercise 8</string>
    <string name="in_ex8_dis_day4">Dips</string>
    <string name="in_ex1_dis_day5">Cardio 30 minutes + 200 Sit-ups</string>
    <string name="p_ex1_dis">Barbell Bench Press</string>
    <string name="p_ex2_dis">Dumbbell Fly</string>
    <string name="p_ex3_dis">Incline Dumbbell Press superset with Cable Fly</string>
    <string name="p_ex4_dis">Cable Raise</string>
    <string name="p_ex5_dis">Pushup (max. rep)</string>
    <string name="p_ex6_dis">Sit-ups</string>
    <string name="p_ex7_dis">Leg Raise</string>
    <string name="p_ex8_dis">Plank</string>
    <string name="p_ex1_dis2">Barbell Squat</string>
    <string name="p_ex2_dis_day2">Sumo Squat with Kettlebell</string>
    <string name="p_ex3_dis_day2">Leg Curl superset with Deadlift</string>
    <string name="p_ex4_dis_day2">Lunges</string>
    <string name="p_ex5_dis_day2">Calf raises</string>
    <string name="p_ex1_dis3">Pullup</string>
    <string name="p_ex2_dis_day3">Lateral Pulldown with narrow grip</string>
    <string name="p_ex3_dis_day3">Smith Machine Row superset with cable reverse row</string>
    <string name="p_ex4_dis_day3">Cable Row with Single Arm Dumbbell Row</string>
    <string name="p_ex5_dis_day3">Cable Pullover</string>
    <string name="p_ex1_dis_day4">Smith Machine Shoulder Press</string>
    <string name="p_ex2_dis_day4">Dumbbell Lateral Raise superset with cable lateral Raise</string>
    <string name="p_ex3_dis_day4">Dumbbell Rear Deal Fly</string>
    <string name="p_ex4_dis_day4">Front Shoulder Cable Raise</string>
    <string name="p_ex5_dis_day4">Sit-up</string>
    <string name="p_ex6_dis_day4">Leg raise</string>
    <string name="p_ex7_dis_day4">Plank</string>
    <string name="p_ex1_dis_day5">Barbell Curl superset with Triceps Rope Pushdown</string>
    <string name="p_ex2_dis_day5">Single Arm Dumbbell Preacher Curl superset with Triceps Overhead Extension</string>
    <string name="p_ex3_dis_day5">Rope Hammer Curl superset with Cable Reverse Pushdown</string>
    <string name="p_ex4_dis_day5">Max rep Cable Curl superset with dips</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack1">Snack 1</string>
    <string name="Lunch">Lunch</string>
    <string name="breakfast_dis1">1/2 cup egg whites scrambled with 1 teaspoon olive oil, 1 teaspoon chopped basil, 1 teaspoon grated Parmesan, and 1/2 cup cherry tomatoes</string>
    <string name="breakfast_dis2">1 slice whole-grain toast</string>
    <string name="breakfast_dis3">1/2 cup blueberries</string>
    <string name="breakfast_dis4">1 cup skim milk</string>
    <string name="snack1dis1">1/2 cup fat-free Greek yogurt topped with 1/4 cup sliced strawberries</string>
    <string name="wl_lunch_dis">Salad made with: 3/4 cup cooked bulgur, 4 ounces chopped grilled chicken breast, 1 tablespoon shredded low-fat cheddar, diced grilled veggies (2 tablespoons onion, 1/4 cup diced zucchini, 1/2 cup bell pepper), 1 teaspoon chopped cilantro, and 1 tablespoon low-fat vinaigrette "</string>
    <string name="snack1dis2">2 tablespoons hummus and 6 baby carrots</string>
    <string name="snack2">Snack 2</string>
    <string name="dinner">Dinner</string>
    <string name="wlDinnerDis1">4 ounces grilled salmon</string>
    <string name="wlDinnerDis2">1 cup wild rice with 1 tablespoon slivered toasted almonds</string>
    <string name="wlDinnerDis3">1 cup wilted baby spinach with 1 teaspoon each olive oil, balsamic vinegar, and grated Parmesan</string>
    <string name="wlDinnerDis4">1/2 cup diced cantaloupe topped with</string>
    <string name="wlDinnerDis5">1/2 cup all-fruit raspberry sorbet and 1 teaspoon chopped walnuts</string>
    <string name="titel">Titel</string>

</resources>