<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ReLytInDay1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/ex1"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:text="@string/in_ex1_dis"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:gravity="left"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/barbell_benc_press"
                android:padding="5dp"
                android:scaleType="fitXY"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/ex2"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:text="@string/in_ex2_dis"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:gravity="left"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/dumbbell_fly"
                android:padding="5dp"
                android:scaleType="fitXY"
                />
        </LinearLayout><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/ex3"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:gravity="left"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:text="@string/in_ex3_dis"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:gravity="left"/>
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:src="@drawable/cable_fly"
            android:padding="5dp"
            android:scaleType="fitXY"
            />
    </LinearLayout><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/ex4"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:gravity="left"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:text="@string/in_ex4_dis"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:gravity="left"/>
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:src="@drawable/barbell_cur"
            android:padding="5dp"
            android:scaleType="fitXY"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/ex5"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:text="@string/in_ex5_dis"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:gravity="left"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/dumbbell_concentration_curl"
                android:padding="5dp"
                android:scaleType="fitXY"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/ex6"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:text="@string/in_ex6_dis"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:gravity="left"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/cablehammer_cur"
                android:padding="5dp"
                android:scaleType="fitXY"
                />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>